Prevent large numbers from overflowing

--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ body {
   border-radius: 0.2rem;
   /* Display number to the right */
   justify-content: end;
+  overflow: hidden;
 }
 
 .display p {
